--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,3 @@
-h2 a{color:#ffc108}
+h2 a{color:#ffc109;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}
+
+/*# sourceMappingURL=style.css.map */
